# jsonrpcbase

./: .gitignore  .hgignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README  README.md  appveyor.yml  changelog.rst  circle.yml  credits.txt  jsonrpcbase.py  minjsonrpc.py  minjsonrpc_tests.py  pyproject.toml  readme.rst  setup.py  tests.py  tox.ini
.github/workflows/: python-package.yml  run-tests.yml
jsonrpcbase/: __init__.py  exceptions.py  main.py  types.py  utils.py
requirements/: dev-env.txt
requirements/wheelhouse/: configparser-3.5.0-py2-none-any.whl  coverage-4.2-cp27-none-linux_x86_64.whl
scripts/: jenkins-build.py  jenkins-install.py
test/: '  service.json  test_jsonrpcbase.py  test_schema.yaml
