[tool.poetry]
name = "kbase_jsonrpcbase"
version = "0.3.0-alpha4"
description = "Simple JSON-RPC service without transport layer"
authors = []
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]
homepage = "https://github.com/kbaseIncubator/jsonrpcbase"
packages = [{ include = "jsonrpcbase" }]

[tool.poetry.dependencies]
python = "^3.6"
jsonschema = "^3.2.0"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.9.0"
flake8 = "^3.8.1"
mypy = "^0.770"
coverage = "^5.1"
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
